<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schema.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.android.scrollingtext.MainActivity">

    <TextView
        android:id="@+id/article_subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="?colorPrimaryVariant"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_subtitle"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:textColor="?colorOnPrimary"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_subheading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/article_text"
                android:textAlignment="center"
                android:textColor="?colorOnPrimary"
                android:textColorLink="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/website_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/edittext_hint_uri"
                android:text="@string/eddittext_uri"/>

            <Button
                android:id="@+id/open_website_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/open_website"
                android:onClick="openWebsite"
                android:backgroundTint="?colorSecondary"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/location_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_loc"
                android:text="@string/edittext_loc"/>

            <Button
                android:id="@+id/open_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/open_location"
                android:onClick="openLocation"
                android:backgroundTint="?colorSecondary"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/share_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_share"
                android:text="@string/edittext_share"/>

            <Button
                android:id="@+id/share_text_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/button_share"
                android:onClick="shareText"
                android:backgroundTint="?colorSecondary"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/camera_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/button_camera"
                android:onClick="takePicture"
                android:backgroundTint="?colorSecondary"
                android:textColor="@color/black"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>