<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?colorPrimaryVariant"
  tools:context="com.carkzis.arkyris.accounts.RegisterActivity">

    <EditText
      android:id="@+id/edittext_register_password2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_reenter_password"
      android:inputType="textPassword"
      app:layout_constraintBottom_toTopOf="@+id/button_actual_register"
      app:layout_constraintEnd_toEndOf="@+id/text_password_requirements"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/text_password_requirements"
      app:layout_constraintTop_toBottomOf="@+id/text_password_requirements" />

    <TextView
      android:id="@+id/register_title"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:layout_marginBottom="16dp"
      android:text="@string/title_register"
      android:textColor="@color/green"
      android:textSize="36sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/edittext_new_username"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

    <EditText
      android:id="@+id/edittext_new_username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_choose_username"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toTopOf="@+id/text_username_requirements"
      app:layout_constraintEnd_toEndOf="@+id/register_title"
      app:layout_constraintStart_toStartOf="@+id/register_title"
      app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <EditText
      android:id="@+id/edittext_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:hint="@string/hint_email"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toTopOf="@+id/edittext_register_password1"
      app:layout_constraintEnd_toEndOf="@+id/text_username_requirements"
      app:layout_constraintStart_toStartOf="@+id/text_username_requirements"
      app:layout_constraintTop_toBottomOf="@+id/text_username_requirements" />

    <EditText
      android:id="@+id/edittext_register_password1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:hint="@string/hint_choose_password"
      android:inputType="textPassword"
      app:layout_constraintBottom_toTopOf="@+id/text_password_requirements"
      app:layout_constraintEnd_toEndOf="@+id/edittext_email"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/edittext_email"
      app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

    <Button
      android:id="@+id/button_actual_register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:onClick="registerUser"
      android:text="@string/button_register_me"
      app:backgroundTint="@color/green"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/edittext_register_password2"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/edittext_register_password2"
      app:layout_constraintTop_toBottomOf="@+id/edittext_register_password2" />

    <TextView
      android:id="@+id/text_username_requirements"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_password_requirements"
      app:layout_constraintBottom_toTopOf="@+id/edittext_email"
      app:layout_constraintEnd_toEndOf="@+id/edittext_new_username"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/edittext_new_username"
      app:layout_constraintTop_toBottomOf="@+id/edittext_new_username" />

    <TextView
      android:id="@+id/text_password_requirements"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_username_alphanumerical"
      app:layout_constraintBottom_toTopOf="@+id/edittext_register_password2"
      app:layout_constraintEnd_toEndOf="@+id/edittext_register_password1"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/edittext_register_password1"
      app:layout_constraintTop_toBottomOf="@+id/edittext_register_password1" />

    <ProgressBar
      android:id="@+id/loading_indicator_register"
      style="@android:style/Widget.Holo.Light.ProgressBar.Large.Inverse"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_marginTop="12dp"
      android:indeterminate="true"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button_actual_register" />

</androidx.constraintlayout.widget.ConstraintLayout>