<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ChangePasswordActivity">

    <ImageView
        android:id="@+id/settings_background2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:tint="?colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/colour_circle"
        android:contentDescription="@string/change_password_background" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
      android:id="@+id/text_change_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/change_your_password"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/edittext_old_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appbar"
      app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_password_requirements2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_password_requirements2"
        app:layout_constraintBottom_toTopOf="@+id/edittext_new_password2"
        app:layout_constraintEnd_toEndOf="@+id/settings_background2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/settings_background2"
        app:layout_constraintTop_toBottomOf="@+id/edittext_new_password1" />

    <EditText
        android:id="@+id/edittext_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/edittext_new_password1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_change_password" />

    <EditText
        android:id="@+id/edittext_new_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/text_password_requirements2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_old_password" />

    <EditText
        android:id="@+id/edittext_new_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_password2"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_submit_pw_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password_requirements2" />

    <Button
      android:id="@+id/button_submit_pw_change"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:onClick="changePassword"
      android:text="@string/change_it"
      app:backgroundTint="?colorSecondary"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edittext_new_password2" />

    <ProgressBar
      android:id="@+id/loading_indicator_change_password"
      style="@android:style/Widget.Holo.Light.ProgressBar.Large.Inverse"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:indeterminate="true"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/settings_background2" />


</androidx.constraintlayout.widget.ConstraintLayout>